# moomer

./: Cargo.toml  LICENSE  README.md
src/: capture.rs  main.rs  platform.rs  renderer.rs
src/shaders/: zoom.wgsl
